# glove_demo

./: README.md  pyproject.toml
src/glove_demo/: __init__.py  quicksin.py  streaming.py
