[project]
name = "glove-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Loonan Chauvette", email = "loonan.chauvette@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "psychtoolbox>=3.0.19.14",
    "soundfile>=0.13.1",
]

[project.scripts]
glove-demo = "glove_demo:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
